SERVER-15715 Remove the usage of DBDirectClient in findAndModify

This also removes the entire sort/no-sort branching and the usage of DB X
lock.